--- a/paulo_garcia/login_reg/client/views/users/new.ejs
+++ b/paulo_garcia/login_reg/client/views/users/new.ejs
@@ -10,9 +10,35 @@
       <h3>Register</h3>
       <form action="/users" method="post">
         <div>
-          <label>Name</label>
-          <input type="text" name="name">
+          <label>First Name</label>
+          <input type="text" name="first_name">
         </div>
+        <div>
+          <label>Last Name</label>
+          <input type="text" name="last_name">
+        </div>
+        <div>
+          <label>Email</label>
+          <input type="text" name="email">
+        </div>
+        <div>
+          <label>Birthday</label>
+          <input type="date" name="birthday">
+        </div>
+        <div>
+          <label>Password</label>
+          <input type="password" name="password">
+        </div>
+        <div>
+          <label>Password Confirmation</label>
+          <input type="password" name="password_conf">
+        </div>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+    <div>
+      <h3>Login</h3>
+      <form action="/sessions" method="post">
         <div>
           <label>Email</label>
           <input type="text" name="email">
@@ -21,11 +47,8 @@
           <label>Password</label>
           <input type="password" name="password">
         </div>
-        <input type="submit" value="Sumbit">
+        <input type="submit" value="Submit">
       </form>
-    </div>
-    <div>
-      <h3>Login</h3>
     </div>
   </div>
 </body>
